[package]
name = "ldk-block-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.104" }
lightning-block-sync = { version = "0.0.104", features = ["rpc-client"]}
bitcoin = { version = "0.27.1" }
serde_json = { version = "1.0" }